# platform.adaptation.samsung_exynos.libtdm-exynos

./: AUTHORS  README  configure.ac
android/: libtdm-android-0.9.0.spec
packaging/: libtdm-exynos.spec
src/: Makefile.am  tdm_android.c  tdm_android.h  tdm_android_display.c  tdm_android_display.h  tdm_android_format.c  tdm_android_format.h  tdm_android_layer.c  tdm_android_layer.h  tdm_android_output.c  tdm_android_output.h  tdm_android_pp.c  tdm_android_pp.h  tdm_android_types.h  tdm_exynos.c  tdm_exynos.h  tdm_exynos_display.c  tdm_exynos_display.h  tdm_exynos_format.c  tdm_exynos_format.h  tdm_exynos_layer.c  tdm_exynos_layer.h  tdm_exynos_output.c  tdm_exynos_output.h  tdm_exynos_pp.c  tdm_exynos_pp.h  tdm_exynos_types.h
